feat: add better example for @JsonTest